# compilers-ckx

./: .gitignore  .qmake.stash  CMakeLists.txt  CNAME  README.md  ckx_ast_node.cpp  ckx_ast_node.hpp  ckx_error.hpp  ckx_file_reader.cpp  ckx_file_reader.hpp  ckx_parser.cpp  ckx_parser.hpp  ckx_token.cpp  ckx_token.hpp  ckx_token_stream.cpp  ckx_token_stream.hpp  ckx_type.cpp  compilers-ckx-master.pro  compilers-ckx.pro  defs.hpp  gg.h  main.cpp
.circleci/: config.yml
clib/: libheap.c  libio.c
compiler/: ckx_ast_dump.cpp  ckx_ast_node.cpp  ckx_ast_node.hpp  ckx_ast_node_fwd.hpp  ckx_env_table.cpp  ckx_env_table.hpp  ckx_error.hpp  ckx_error_intepreter.cpp  ckx_error_intepreter.h  ckx_fake_parser.cpp  ckx_fake_parser.h  ckx_file_reader.cpp  ckx_file_reader.hpp  ckx_file_writer.cpp  ckx_file_writer.hpp  ckx_func_name_mangler.cpp  ckx_func_name_mangler.hpp  ckx_operator.cpp  ckx_operator.hpp  ckx_parser.cpp  ckx_parser.hpp  ckx_parser_impl.hpp  ckx_prelexed_type.cpp  ckx_prelexed_type.hpp  ckx_sema.cpp  ckx_sema.hpp  ckx_sema_fwd.hpp  ckx_sema_result.hpp  ckx_sema_result_fwd.hpp  ckx_token.cpp  ckx_token.hpp  ckx_token_set.cpp  ckx_token_set.hpp  ckx_token_stream.cpp  ckx_token_stream.hpp  ckx_translate.cpp  ckx_type.cpp  ckx_type.hpp  ckx_type_dump.cpp  compiler.pro  (+4 more)
doc/: doc.pro  production.txt
doc/sample/: 1.ckx  2.ckx  3.ckx  4.ckx  5.ckx  6.ckx
env_test/: tst_env_testtest.cpp
include/llvm/: llvm_inst.hpp  llvm_inst_detail.hpp  llvm_ir_builder.hpp  llvm_ir_builder_impl.hpp  llvm_type.hpp  llvm_value.hpp  llvm_value_detail.hpp  opdef.hpp
include/saber/: algorithm.hpp  c8assert.hpp  excalibur.hpp  functional.hpp  iterator.hpp  list.hpp  memory.hpp  object_pool.hpp  optional.hpp  result.hpp  saber_traits.hpp  string.hpp  string_pool.hpp  strings.defs.h  type_traits.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  vector.hpp
include/we/: defs.hpp  file_reader.hpp  file_writer.hpp
llvm_ir_builder/: defs.hpp  llvm_implicit_list.hpp  llvm_inst.cpp  llvm_inst.hpp  llvm_inst_detail.hpp  llvm_ir_builder.cpp  llvm_ir_builder.hpp  llvm_ir_builder.pro  llvm_ir_builder_impl.cpp  llvm_ir_builder_impl.hpp  llvm_type.hpp  llvm_value.cpp  llvm_value.hpp  llvm_value_detail.hpp  main_as_test.cpp  opdef.hpp
saber/include/: algorithm.hpp  c8assert.hpp  deque.hpp  excalibur.hpp  forward_list.hpp  free_tree.hpp  functional.hpp  iterator.hpp  list.hpp  map.hpp  memory.hpp  object_pool.hpp  optional.hpp  result.hpp  saber_traits.hpp  safe_stl_general.hpp  (+7 more)
(+84 files in other folders)
